--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -33,27 +33,44 @@
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="36dp"
+        android:layout_width="102dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/listMessage"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="12dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="171dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/inputs"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:padding="4dp" />
 
     <Button
         android:id="@+id/sendbutton"
-        android:layout_width="wrap_content"
-        android:layout_height="36dp"
+        android:layout_width="44dp"
+        android:layout_height="33dp"
         android:layout_below="@+id/listMessage"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="70dp"
         android:layout_marginLeft="19dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginEnd="21dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginRight="19dp"
         android:layout_toEndOf="@+id/editText"
         android:text="OK" />
+
+    <ImageButton
+        android:id="@+id/ImageButton01"
+        android:layout_width="65dp"
+        android:layout_height="38dp"
+        android:layout_below="@+id/listMessage"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="70dp"
+        android:layout_marginLeft="19dp"
+        android:layout_marginTop="7dp"
+
+        android:layout_marginEnd="310dp"
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/buttons"
+        android:src="@drawable/camera2" />
 </RelativeLayout>
