--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -100,12 +100,41 @@
                 android:inputType="text"
                 android:padding="4dp" />
 
+            <EditText
+                android:id="@+id/et_mostrar_fecha_picker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/register_telefono"
+                android:layout_marginStart="39dp"
+                android:layout_marginTop="17dp"
+                android:layout_toEndOf="@+id/ib_obtener_fecha"
+                android:ems="10"
+                android:hint="@string/formato_fecha"
+                android:inputType="date"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+            <ImageButton
+                android:id="@+id/ib_obtener_fecha"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/register_telefono"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="19dp"
+                android:layout_marginRight="8dp"
+                android:src="@android:drawable/ic_menu_my_calendar"
+                app:layout_constraintHorizontal_bias="0.505"
+                app:layout_constraintLeft_toRightOf="@+id/et_mostrar_fecha_picker"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView"
+                tools:ignore="ContentDescription" />
+
 
             <Button
                 android:id="@+id/register_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/register_telefono"
+                android:layout_below="@+id/et_mostrar_fecha_picker"
                 android:padding="4dp"
                 android:layout_marginLeft="19dp"
                 android:layout_marginTop="10dp"
