--- a/app/src/main/res/layout/content_contacts.xml
+++ b/app/src/main/res/layout/content_contacts.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ProfileActivity"
+    tools:context=".ContactsActivity"
     tools:showIn="@layout/activity_chat">
 
     <LinearLayout
@@ -26,7 +26,7 @@
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/textViewContactos"
             android:layout_width="414dp"
             android:layout_height="wrap_content"
             android:text="Contactos registrados en tu usuario" />
@@ -38,7 +38,7 @@
             android:layout_gravity="center_horizontal" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textViewContactos2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Contactos Disponibles" />
